--- a/css/pachong.css
+++ b/css/pachong.css
@@ -4,26 +4,11 @@
 	margin: 0;
 	padding:0;
 	font-family: "思源黑体 CN Light";
-	text-decoration: none;
-	color:black;
 	font-size: 12px;
-}
-.top .center{
-	margin: auto;
-}
-.top .center a{
-	display: block;
 	text-decoration: none;
-	float: left;
-	margin: 0 50px;
-	color: black;
-	font-size: 18px;
-
 }
-.top{
-	background-color: #EFEFEF;
-	box-shadow: 0 5px 5px rgba(0,0,0,0.5);
-	width: 100%;
-	height: 60px;
-	line-height: 60px;
+.daohang a{
+	font-size: 16px;
+	text-decoration: none;
+	color: black;
 }
