--- a/css/pachong.css
+++ b/css/pachong.css
@@ -1,14 +1,35 @@
 @charset "utf-8";
 /* CSS Document */
 *{
-	margin: 0;
-	padding:0;
+	margin: 0px;
+	padding:0px;
 	font-family: "思源黑体 CN Light";
 	font-size: 12px;
 	text-decoration: none;
 }
+a{
+	display: block;
+	text-decoration: none;
+}
+.daohang{
+	width: 100%;
+	height: 60px;
+	line-height: 60px;
+	background-color: rgba(111,111,111,0.44);
+	box-shadow:0 2px 5px #888888;
+	position: fixed;
+}
 .daohang a{
 	font-size: 16px;
 	text-decoration: none;
-	color: black;
+	color: white;
+}
+.tupian{
+	width: 100%;
+	height: 40%;;
+	text-align: center;
+}
+.tupian img{
+	width: 100%;
+	height: 100%	
 }
