--- a/css/pachong.css
+++ b/css/pachong.css
@@ -33,3 +33,15 @@ a{
 	width: 100%;
 	height: 100%	
 }
+.hello{
+	width: 500px;
+	height: 500px;
+	border: 10px white solid;
+	line-height: 500px;
+	text-align: center;
+	font-size: 60px;
+	position: fixed;
+	right: 40%;
+	top:30%;
+	color: white;
+}
